syntax = "proto3";

package newsrecommend;

service NewsRecommend {
    rpc GetRecommendUsers(ItemCFRequest) returns (ItemCFResponse) {}
    rpc GetRecommendTags(UserCFRequest) returns (UserCFResponse) {}
    rpc GetWeight(GetWeightRequest) returns (GetWeightResponse) {}
    rpc TrainModel(TrainModelRequest) returns (TrainModelRequest) {}
}

message GetWeightRequestUnit {
    int32 user_id = 1;
    int32 tag_id = 2;
    double rating = 3;
    int64 last_view_time = 4;
}

message GetWeightRequest {
    repeated GetWeightRequestUnit request = 1;
}


message GetWeightResponseUnit {
    int32 user_id = 1;
    int32 tag_id = 2;
    double weight = 3;
}

message GetWeightResponse {
    repeated GetWeightResponseUnit response = 1;
}


message TrainModelRequestUnit {
    int32 user_id = 1;
    int32 tag_id = 2;
    double rating = 3;
}

message TrainModelRequest {
    repeated TrainModelRequestUnit request = 1;
}


message UserCFRequest {
    repeated int32 user_id = 1;
    int32 num = 2;
}

message UserCFResponseUnit {
    int32 user_id = 1;
    repeated int32 tag_id = 2;
}

message ItemCFRequest {
    repeated int32 tag_id = 1;
    int32 num = 2;
}

message ItemCFResponseUnit {
    int32 tag_id = 1;
    repeated int32 user_id = 2;
}


message UserCFResponse {
    repeated UserCFResponseUnit response = 1;
}

message ItemCFResponse {
    repeated ItemCFResponseUnit response = 1;
}